cmake_minimum_required(VERSION 3.0.2)
project(thirdProj)


find_package(catkin REQUIRED COMPONENTS
  nav_msgs
  roscpp
  rospy
  std_msgs
)
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES thirdProj
#  CATKIN_DEPENDS nav_msgs roscpp rospy std_msgs
#  DEPENDS system_lib
)

include_directories(
# include
  include ${catkin_INCLUDE_DIRS}
)

add_executable(thirdProj_node src/thirdProj_node.cpp src/CFuzzySpeedController.cpp)

target_link_libraries(${PROJECT_NAME}_node
  ${catkin_LIBRARIES}
  fuzzylite
  tinyxml2
)
install(TARGETS ${PROJECT_NAME}_node
  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
